Bug 767323 Ampersands don't appear in the Windows biff icon tooltip r=bienvenu